[gd_scene load_steps=6 format=3 uid="uid://cso0gjikuajth"]

[ext_resource type="Script" path="res://scripts/RhythmDisplay.gd" id="1_tgfnq"]
[ext_resource type="Texture2D" uid="uid://dob4hubvkja0x" path="res://14.png" id="3_lysh8"]
[ext_resource type="Script" path="res://scenes/RadialDisplay.gd" id="4_w0la8"]

[sub_resource type="Gradient" id="Gradient_ykwei"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t1owy"]
gradient = SubResource("Gradient_ykwei")

[node name="RhythmDisplay" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -350.0
offset_right = 350.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_tgfnq")

[node name="RecordIcon" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_lysh8")
expand_mode = 3
script = ExtResource("4_w0la8")

[node name="Markers" type="Control" parent="RecordIcon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -350.0
offset_right = 350.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterAnchor" type="Control" parent="RecordIcon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="RecordIcon/CenterAnchor"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -362.0
offset_top = -5.0
offset_bottom = 5.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture1D_t1owy")
